--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,6 +28,15 @@
     {% endif %}
   </p>
   <p>
+    <span
+      data-bs-toggle="tooltip"
+      data-bs-placement="top"
+      title="Tacos and Love from Austin, TX"
+    >
+      🌮 + ❤️
+    </span>
+  </p>
+  <p>
     {%- capture _platform -%}
       <a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a>
     {%- endcapture -%}
