Update .blockquote-footer, add todo to fix scss

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -8,6 +8,7 @@
 ';
 
 /* append your custom style below */
-blockquote-footer::before {
+// todo: fix bootstrap sass _type.scss
+.blockquote-footer::before {
   content: "— ";
 }
