--- a/_includes/til-description.html
+++ b/_includes/til-description.html
@@ -1,15 +1,18 @@
 {%- comment -%}
-  Get post description or generate it from the post content.
+  Get TIL description or generate it from the post content.
 {%- endcomment -%}
 
-{%- assign max_length = include.max_length | default: 350 -%}
+
+{%- assign max_length = site.til.excerpt_max_length | default: 500 -%}
 
 {% capture description %}
 {% if post.description %}
     {{- post.description -}}
 {% else %}
-    {{ post.content | truncate: max_length | markdownify }}
+    {{- post.content | truncate: max_length -}}
 {% endif %}
 {% endcapture %}
 
-{% include refactor-content.html content=description lang=lang %}
+{% assign description_md = description | markdownify %}
+
+{% include refactor-content.html content=description_md lang=lang %}
