Update til description

--- a/_includes/til-description.html
+++ b/_includes/til-description.html
@@ -3,7 +3,7 @@
 {%- endcomment -%}
 
 
-{%- assign max_length = site.til.excerpt_max_length | default: 500 -%}
+{%- assign max_length = site.til_description.max_length | default: 500 -%}
 
 {% capture description %}
 {% if post.description %}
